remote audio to agent support

--- a/get-call.html
+++ b/get-call.html
@@ -37,6 +37,7 @@
  						<h3>Agent Support Video</h3>
  					</div>
  					<div class="container" id="video_container"></div>
+ 					<div id="incoming-video" style="visibility:hidden;"></div>
  				</div>
 
  				<div class="chat-tab">
