chat logged page

--- a/get-call.html
+++ b/get-call.html
@@ -39,12 +39,19 @@
  					<div class="container" id="video_container"></div>
  					<div id="incoming-video" style="visibility:hidden;"></div>
  				</div>
-
- 				<div class="chat-tab">
- 					<div class="header">
- 						<h3>Chat with me</h3>
- 					</div>
- 				</div>
+				<div class="chat-container">
+					<div class="header">
+						<h3>Chat Here!</h3>
+					</div>
+					<div class="messages">
+						<ul id="messages"></ul>
+					</div>
+					<div class="send-container">
+						<form id="frm_send" method="post">
+							<input type="text" id="txt_send" class="text-send" placeholder="Write Here!"> 
+						</form>
+					</div>
+				</div>
  			</div>
  			<div class="col-md-8 right-side">
  				<div class="header">
