chat between 2 users

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
 		<div class="row">
 			<div class="col-xs-6 col-md-6 big-box" id="third-child"></div>
 			<div class="col-xs-6 col-md-6 big-box" id="fourth-child">
-				<button id="btnMakeCall" class="btn btn-call">Make Call</button>
+				<button id="btnContactUs" class="btn btn-contact">Contact Us!</button>
 
 				<div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 					<div class="modal-dialog">
 						<div class="modal-content modal-content-four">
 							<div class="modal-header">
+								<button id="btnMakeCall" class="btn btn-call">Make Call</button>
+								<button id="btnHangup" class="btn btn-hangup">Hangup</button>
 								<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 								<h3 class="modal-title" id="myModalLabel">WebRTC is Comming - Tech Support</h3>
 							</div>
